--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Random Quotes</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
+	<style>
+	body{
+		transition:.5s ease-in
+	}
+	</style>
   </head>
 
   <body>
